--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -6,10 +6,10 @@
 <style>
 .embed-container {
   position: relative;
-  padding-bottom: 56.25%;
+  padding-bottom: calc(56.25% * 0.85);
   height: 0;
   overflow: hidden;
-  max-width: 100%;
+  max-width: 85%;
 }
 .embed-container iframe,
 .embed-container object,
