--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -5,7 +5,7 @@
 </div>
 <style>
 .embed-container {
-  position: relative;
+  position: center;
   padding-bottom: calc(56.25% * 0.85);
   height: 0;
   overflow: hidden;
