--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -6,10 +6,11 @@
 <style>
 .embed-container {
   position: relative;
-  padding-bottom: calc(56.25% * 0.85);
+  padding-bottom: calc(56.25% * 0.75);
   height: 0;
   overflow: hidden;
-  max-width: 85%;
+  max-width: 75%;
+  margin: 0 auto;
 }
 .embed-container iframe,
 .embed-container object,
