--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,7 @@
 <!-- start custom footer snippets -->
 <!-- <a href="/sitemap/">Sitemap</a> -->
+
+<img src="https://github.com/francescapalermo/francescapalermo.github.io/tree/master/images/cat.gif" height="200" width="200">
 <!-- end custom footer snippets -->
+
+
