--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -20,6 +20,7 @@
 <link rel="shortcut icon" href="/images/favicon.ico?v=M44lzPylqQ">
 <!-- Global font for the whole site -->
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
 <meta name="msapplication-TileColor" content="#000000">
 <meta name="msapplication-TileImage" content="{{ base_path }}/images/mstile-144x144.png?v=M44lzPylqQ">
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml?v=M44lzPylqQ">
